Small performance cleanup